# HUstoneWizard

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
src/: files.ts  info_page.css  info_page_with_img.css  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
