[package]
name = "HUstoneWizard"
version = "1.2.1"
description = "A HUstone Tool"
authors = ["PRCXieHongyi"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "protocol-asset", "path-all", "fs-exists", "fs-copy-file", "fs-remove-file", "fs-create-dir", "fs-read-dir", "fs-rename-file", "fs-write-file", "fs-read-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
